[package]
name = "luademo"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_mod_scripting = { git = "https://github.com/makspll/bevy_mod_scripting.git", rev = "7590248", features = ["lua54","lua_script_api"] }
bevy_mod_scripting_lua = { git = "https://github.com/makspll/bevy_mod_scripting.git", rev = "7590248"}
mlua = "*"
bevy = { version = "0.11.2", features = ["dynamic_linking", "serialize","bevy_asset","bevy_core_pipeline","bevy_pbr","bevy_render","bevy_sprite","bevy_winit","filesystem_watcher","hdr","multi-threaded","tonemapping_luts","ktx2","zstd"] , default-features = false }
bevy_script_api = {git = "https://github.com/makspll/bevy_mod_scripting.git", rev = "7590248"}
rand = "0.8.5"
rand_distr = "0.4.3"