[package]
name = "luademo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
bevy_mod_scripting = { version = "0.5.0", features = [ "lua51", "lua_script_api" ] }
bevy_mod_scripting_lua = "0.5.0"
bevy_script_api = "0.5.0"
mlua = "0.9.6"
rand = "0.8.5"
rand_distr = "0.4.3"

[dependencies.bevy]
version = "0.13.0"
default-features = false
features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_sprite",
  "bevy_winit",
  "dynamic_linking",
  "file_watcher",
  "hdr",
  "ktx2",
  "multi-threaded",
  "serialize",
  "tonemapping_luts",
  "zstd"
]
